[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/Interface.tscn" type="PackedScene" id=1]
[ext_resource path="res://interface/DroneInterface.gd" type="Script" id=2]

[node name="DroneInterface" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect" index="0"]
anchor_left = 0.01
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer" index="0"]
margin_right = 263.0
margin_bottom = 720.0
alignment = 1

[node name="Label" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer" index="0"]
margin_top = 155.0
margin_right = 263.0
margin_bottom = 169.0
text = "Drones"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/HBoxContainer/VBoxContainer" index="1"]
margin_top = 173.0
margin_right = 263.0
margin_bottom = 193.0
custom_constants/margin_top = 20

[node name="BuyMiningDrone" type="Button" parent="ColorRect/HBoxContainer/VBoxContainer" index="2"]
margin_top = 197.0
margin_right = 263.0
margin_bottom = 217.0
text = "Buy Mining Drone"

[node name="MiningDroneInformation" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer" index="3"]
margin_top = 221.0
margin_right = 263.0
margin_bottom = 286.0
text = "Digs Tunnels and Mines
Cost: $4,000
Uses a lot of Coolant When Mining
"
align = 1

[node name="BuyLogisticDrone" type="Button" parent="ColorRect/HBoxContainer/VBoxContainer" index="4"]
margin_top = 290.0
margin_right = 263.0
margin_bottom = 310.0
text = "Logistic Drone"

[node name="LogisticDroneInformation" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer" index="5"]
margin_top = 314.0
margin_right = 263.0
margin_bottom = 379.0
text = "Transports Loose Material to Collectors
Cost: $2,000
Moving takes energy
"
align = 1

[node name="BuyConstructionDrone" type="Button" parent="ColorRect/HBoxContainer/VBoxContainer" index="6"]
margin_top = 383.0
margin_right = 263.0
margin_bottom = 403.0
text = "Construction Drone"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConstructionDroneInformation" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer" index="7"]
margin_top = 407.0
margin_right = 263.0
margin_bottom = 472.0
text = "Assembles Equipment and Paves Ground
Cost: $3,000
Uses a lot of Energy while Working
"
align = 1

[node name="BuyServiceDrone" type="Button" parent="ColorRect/HBoxContainer/VBoxContainer" index="8"]
margin_top = 476.0
margin_right = 263.0
margin_bottom = 496.0
text = "Service Drone"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServiceDroneInformation" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer" index="9"]
margin_top = 500.0
margin_right = 263.0
margin_bottom = 565.0
text = "Repairs Drones and Equipment
Cost: $5,000
Consumes Energy and Coolant to Repair
"
align = 1
[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/BuyMiningDrone" to="." method="_on_BuyMiningDrone_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/BuyLogisticDrone" to="." method="_on_BuyLogisticDrone_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/BuyConstructionDrone" to="." method="_on_BuyConstructionDrone_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/BuyServiceDrone" to="." method="_on_BuyServiceDrone_pressed"]
